# dropbear-epka

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  README  README.md  configure.ac
etc/: epka-mysqlsample.json  epka-test.json  epka-tkpdb.json
patches/: README.md  dropbear-2018-76.patch
src/: Makefile.am  common.c  common.h  fileauth.c  mysqlauth.c  testauth.c
